Fix items grid spacing

--- a/src/style.css
+++ b/src/style.css
@@ -56,11 +56,12 @@
     @apply cursor-pointer
 }
 
-.items-container {
+#items-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 300px));
     grid-auto-rows: minmax(250px, 1fr);
     gap: 4rem;
+    padding: 3rem;
 }
 
 .item-box {
@@ -68,5 +69,5 @@
 }
 
 .add-item-btn {
-    @apply border-primary border-2 border-dashed font-bold text-8xl items-center
+    @apply border-primary border-2 border-dashed rounded-lg font-bold text-8xl items-center
 }
